// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Speaker Normal Card correctly 1`] = `
<div
  class="relative overflow-hidden bg-white card radius-2xl shadow-none hover-shadow-Two"
  data-testid="person-card"
>
  <div
    class="person-card person-normal  relative overflow-hidden grid"
  >
    <div
      class="inline-flex"
    >
      <a
        class="inline-flex"
        href="https://www.google.com/"
        target="_blank"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27700%27%20height=%27900%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Myriam Jessier"
            class="inline-flex image"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
    </div>
    <div
      class="content p-5 lg:p-6"
    >
      <h3
        class="name text-[1.25rem] font-medium leading-[1.5] md:font-semibold"
      >
        <a
          class="text-inherit"
          href="https://www.google.com/"
          target="_blank"
        >
          Myriam Jessier
        </a>
      </h3>
      <div
        class="designation text-sm text-black md:text-base mt-[.375rem]"
      >
        PRAGM
      </div>
      <div
        class="lg:block hidden lg:mt-[1rem]"
      >
        <a
          class="event-link text-sm text-secondary underline"
          href="https://www.google.com/"
          target="_blank"
        >
          KEYNOTE (Thursday): Why SEOs should love (not fear) GA4
        </a>
      </div>
    </div>
    <div
      class="bottom-fixed-area"
    />
  </div>
</div>
`;

exports[`renders Speaker Transparent Card correctly 1`] = `
<div
  class="relative overflow-hidden bg-white card radius-2xl shadow-none hover-shadow-none"
  data-testid="person-card"
>
  <div
    class="person-card person-transparent  relative overflow-hidden grid"
  >
    <div
      class="inline-flex"
    >
      <a
        class="inline-flex"
        href="https://www.google.com/"
        target="_blank"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27700%27%20height=%27900%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Myriam Jessier"
            class="inline-flex image"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
    </div>
    <div
      class="content p-5 lg:p-6"
    >
      <h3
        class="name text-[1.25rem] font-medium leading-[1.5] md:font-semibold"
      >
        <a
          class="text-inherit"
          href="https://www.google.com/"
          target="_blank"
        >
          Myriam Jessier
        </a>
      </h3>
      <div
        class="designation text-sm text-black md:text-base mt-[.375rem]"
      >
        PRAGM
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Team Card correctly 1`] = `
<div
  class="relative overflow-hidden bg-white card radius-2xl shadow-none hover-shadow-none"
  data-testid="person-card"
>
  <div
    class="person-card person-team  relative overflow-hidden grid"
  >
    <div
      class="inline-flex"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27700%27%20height=%27900%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Myriam Jessier"
          class="inline-flex image"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <div
      class="content p-5 lg:p-6"
    >
      <h3
        class="name text-[1.25rem] font-medium leading-[1.5] md:font-semibold"
      >
        Myriam Jessier
      </h3>
      <div
        class="designation text-sm text-black md:text-base mt-[.375rem]"
      >
        PRAGM
      </div>
    </div>
  </div>
</div>
`;
